[package]
name = "nfde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.3", features = ["derive"] }
command-macros = "0.2.9"
confy = "0.5.1"
postgres = "0.19.5"
skim = "0.10.4"
which = "4.4.0"
serde_derive = "1.0"
serde = "1.0"
dialoguer = "0.10.4"
shellexpand = "3.1.0"
atty = "0.2.14"


[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "nfde"
path = "src/nfde/main.rs"

[[bin]]
name = "run_api"
path = "src/run_api/main.rs"
